bug 6020: Removed fixed height on title css class for the SSG's applet login page as well as the SSG's ems trust page.  This prevents the title from spilling outside its area and overwriting the rest of the page when the page is resized to be very narrow on Firefox 3.  (I'm no longer willing to hazard a guess whether or not it's a in Firefox, but in any case removing the height attribute eliminates the problem on both Firefox SSG-3 and IE 7.)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@21454 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/emstrust.css
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/emstrust.css
@@ -12,7 +12,6 @@ body {
     background-position: 4px 4px;
     background-repeat: no-repeat;
     background-color: white;
-    height: 36px;
 }
 
 .heading {
