--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/ssglogin.css
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/ssglogin.css
@@ -12,7 +12,6 @@
       background-position: 4px 4px;
       background-repeat: no-repeat;
       background-color: white;
-      height: 36px;
   }
 
   .heading {
